--- a/libs/imgui-hook/CMakeLists.txt
+++ b/libs/imgui-hook/CMakeLists.txt
@@ -2,8 +2,9 @@ cmake_minimum_required(VERSION 3.0)
 
 add_library(imgui-hook STATIC
     imgui/imgui.cpp
+	imgui/imgui_demo.cpp
 	imgui/imgui_draw.cpp
-	imgui/imgui_impl_opengl3.cpp
+	imgui/imgui_impl_opengl2.cpp
 	imgui/imgui_impl_win32.cpp
 	imgui/imgui_tables.cpp
 	imgui/imgui_widgets.cpp 
@@ -17,4 +18,5 @@ target_include_directories(imgui-hook PRIVATE imgui
     ../cocos-headers/cocos2dx/platform/win32
     ../cocos-headers/cocos2dx/platform/third_party/win32
     ../cocos-headers/cocos2dx/platform/third_party/win32/OGLES
+    ../detours
 )
